iframe overflow fix

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a {
 
 iframe {
     border: none;
+    max-width: 100%;
 }
 
 nav button {
